--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"Compare activity/presence between two github users\"",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "build": "webpack"
   },
   "babel": {
     "presets": [
